Added section navigation

--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -1,5 +1,6 @@
 body{width:100%;height:100%}
-section{height:inherit;width:inherit;display:block;position:fixed;z-index:100;top:0;left:0}
+section{height:inherit;width:inherit;display:none;position:fixed;z-index:100;top:0;left:0}
+section.active{display:block}
 header{position:fixed;top:0;left:0;height:50px;width:100%}
 footer{position:fixed;bottom:0;left:0;width:100%;height:80px}
 article{position:fixed;top:50px;left:0;height:inherit;width:100%;display:block}
