--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -4,11 +4,14 @@ body
 section
   height inherit
   width inherit
-  display block
+  display none
   position fixed
   z-index 100
   top 0
   left 0
+
+section.active
+  display block
 
 header
   position fixed
