--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -1,5 +1,29 @@
-section
-  background-color black
+TEXT                = #000
+THEME               = #00AFE3
+COLOR               = #F4F4F4
+ASIDE               = #2f2f2f
+DANGER              = #e74c3c
+SUCCESS             = #2ecc71
+WARNING             = #edba22
+DISABLED            = #acb8b9
+BACKGROUND          = lighten(#DFDFDF, 25%)
+
+/* -------------------------- VARIATIONS -------------------------- */
+LIST_border         = darken(COLOR, 15%)
+NAV_LINK            = lighten(ASIDE, 20%)
+NAV_LINK_ACTIVE     = #fff
+/* ------------------------- TRANSITION ------------------------- */
+TRANSITION_time     = 400ms
+TRANSITION_easing   = ease
+/* ------------------------- RADIUS ------------------------- */
+BORDER_radius       = 1px
+/* -------------------------- FORM -------------------------- */
+FORM_color          = darken(#e5e5e5, 5%)
+FORM_border         = 2px
+FORM_border_radius  = (BORDER_radius * FORM_border)
+/* -------------------------- BUTTON -------------------------- */
+SHADOW              = rgba(0,0,0,0.1)
+
 
 header
   background-color blue
