Changes on styles

--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -20,6 +20,20 @@ header
   left 0
   height HEADER_HEIGHT
   width 100%
+  text-align center
+
+  & > h1
+    font-weight bold
+    display inline-block
+    position absolute
+    left 2em
+    right 2em
+
+  & > nav.right
+    float: right
+
+  & > nav.left
+    float: left
 
 footer
   position fixed
