--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -10,17 +10,17 @@ ASIDE_TRANSITION_TIME   = 150ms
 
 FOOTER_HEIGHT           = 80px
 
-// FONT_SIZE_TINY          = 11px
-// FONT_SIZE_SMALL         = 0.9em
-// FONT_SIZE_NORMAL        = 1.0em
-// FONT_SIZE_BIG           = 1.2em
-// FONT_SIZE_LARGE         = 1.4em
+FONT_SIZE_TINY          = 11px
+FONT_SIZE_SMALL         = 0.9em
+FONT_SIZE_NORMAL        = 1.0em
+FONT_SIZE_BIG           = 1.2em
+FONT_SIZE_LARGE         = 1.4em
 
 // LIST_IMAGE              = 44px
 // LIST_BIG_IMAGE          = 65px
 // LIST_SMALL_IMAGE        = 24px
 
-// INDENT                  = 0.8em
+INDENT                  = 0.8em
 
 // FORM_HEIGHT             = 30px
 // FORM_border             = 2px
