--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -1,7 +1,10 @@
 body{width:100%;height:100%;background-color:#000}
 section{height:inherit;width:inherit;display:none;position:fixed;z-index:100;top:0;left:0;}
 section.active{display:block}
-header{position:fixed;top:0;left:0;height:50px;width:100%}
+header{position:fixed;top:0;left:0;height:50px;width:100%;text-align:center;}
+header > h1{font-weight:bold;display:inline-block;position:absolute;left:2em;right:2em}
+header > nav.right{float:right}
+header > nav.left{float:left}
 footer{position:fixed;bottom:0;left:0;width:100%;height:80px}
 article{position:fixed;top:50px;left:0;height:inherit;width:100%;display:none;}
 article.active{display:block}
@@ -9,7 +12,8 @@ aside{display:block;width:256px;padding:6px;z-index:110;position:fixed;top:50px;
 aside.show{-webkit-transform:translate(270px);-moz-transform:translate(270px);-ms-transform:translate(270px);-o-transform:translate(270px);transform:translate(270px)}
 #background{position:fixed;top:50px;bottom:0;left:0;right:0;background-color:rgba(0,0,0,0.5)}
 
-header{background-color:#00f}
-footer{background-color:#008000}
-article{background-color:#f00}
-aside{background-color:#808080}
+body{font:12.8px "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif}
+header{background-color:#6c3;color:#f4f4f4}
+footer{background-color:#2f2f2f;color:#f4f4f4}
+article{background-color:#e7e7e7;color:#000}
+aside{background-color:#2f2f2f;color:#f4f4f4}
