--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -2,15 +2,17 @@ body{width:100%;height:100%;background-color:#000;-webkit-touch-callout:none;-we
 section{height:inherit;width:inherit;display:none;position:fixed;z-index:100;top:0;left:0;}
 section.active{display:block}
 header{position:fixed;top:0;left:0;height:50px;width:100%;text-align:center;}
-header > h1{font-weight:bold;display:inline-block;position:absolute;left:2em;right:2em}
-header > nav.right{float:right}
-header > nav.left{float:left}
+header > h1{font-weight:bold;display:inline-block;position:absolute;left:4em;right:4em}
+header > nav.right{margin-right:5px;float:right}
+header > nav.left{margin-left:5px;float:left}
+header > nav > button.button{margin-top:5px;text-indent:0;border:1px solid #808184;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;display:inline-block;font-weight:bold;font-style:normal;line-height:30px;text-decoration:none;text-align:center;-webkit-box-shadow:1px 1px rgba(255,255,255,0.25);-moz-box-shadow:1px 1px rgba(255,255,255,0.25);-ms-box-shadow:1px 1px rgba(255,255,255,0.25);-o-box-shadow:1px 1px rgba(255,255,255,0.25);box-shadow:1px 1px rgba(255,255,255,0.25)}
 footer{position:fixed;bottom:0;left:0;width:100%;height:80px}
 article{position:fixed;top:50px;left:0;height:inherit;width:100%;display:none;}
 article.active{display:block}
 aside{display:block;width:256px;padding:6px;z-index:110;position:fixed;top:50px;bottom:0;left:-270px;-webkit-transition:all 150ms linear;-moz-transition:all 150ms linear;-ms-transition:all 150ms linear;-o-transition:all 150ms linear;transition:all 150ms linear;}
 aside.show{-webkit-transform:translate(270px);-moz-transform:translate(270px);-ms-transform:translate(270px);-o-transform:translate(270px);transform:translate(270px)}
-#background{position:fixed;top:50px;bottom:0;left:0;right:0;background-color:rgba(0,0,0,0.5)}
+#background{position:fixed;top:50px;bottom:0;left:0;right:0;-webkit-transition:opacity 1s ease-out;-moz-transition:opacity 1s ease-out;-ms-transition:opacity 1s ease-out;-o-transition:opacity 1s ease-out;transition:opacity 1s ease-out;z-index:0;}
+#background.show{background-color:rgba(0,0,0,0.6);z-index:109}
 
 button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:normal;line-height:40px;text-decoration:none;text-align:center}
 
