--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -5,7 +5,7 @@ header{position:fixed;top:0;left:0;height:50px;width:100%;text-align:center;}
 header > h1{font-weight:bold;display:inline-block;position:absolute;left:4em;right:4em}
 header > nav.right{margin-right:5px;float:right}
 header > nav.left{margin-left:5px;float:left}
-header > nav > button.button{margin-top:5px;text-indent:0;border:1px solid #808184;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;display:inline-block;font-weight:bold;font-style:normal;line-height:30px;text-decoration:none;text-align:center;-webkit-box-shadow:1px 1px rgba(255,255,255,0.25);-moz-box-shadow:1px 1px rgba(255,255,255,0.25);-ms-box-shadow:1px 1px rgba(255,255,255,0.25);-o-box-shadow:1px 1px rgba(255,255,255,0.25);box-shadow:1px 1px rgba(255,255,255,0.25)}
+header > nav > button.button{margin-top:5px;text-indent:0;border:1px solid #737476;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;display:inline-block;font-weight:bold;font-style:normal;line-height:30px;text-decoration:none;text-align:center;-webkit-box-shadow:1px 1px rgba(255,255,255,0.25);-moz-box-shadow:1px 1px rgba(255,255,255,0.25);-ms-box-shadow:1px 1px rgba(255,255,255,0.25);-o-box-shadow:1px 1px rgba(255,255,255,0.25);box-shadow:1px 1px rgba(255,255,255,0.25);background-color:rgba(180,180,180,0.15)}
 footer{position:fixed;bottom:0;left:0;width:100%;height:80px}
 article{position:fixed;top:50px;left:0;height:inherit;width:100%;display:none;}
 article.active{display:block}
