--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -49,7 +49,7 @@ header
     & > button.button
       margin-top 5px
       text-indent 0
-      border 1px solid #808184
+      border 1px solid #737476
       border-radius(5px)
       display inline-block
       font-weight bold
@@ -58,6 +58,7 @@ header
       text-decoration none
       text-align center
       box-shadow 1px 1px rgba(255, 255, 255, .25)
+      background-color rgba(180,180,180,0.15)
 
 footer
   position fixed
