--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -29,3 +29,11 @@ INDENT                  = 0.8em
 // FORM_RADIO_BUTTON       = 26px
 
 // BUTTON_HEIGHT           = 34px
+
+/* Z-INDEXES */
+SECTION_INDEX           = 100
+HEADER_H1_INDEX         = 101
+HEADER_NAV_INDEX        = 102
+
+ASIDE_BCK_INDEX         = 200
+ASIDE_INDEX             = 201
