--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -74,6 +74,68 @@ footer
   width 100%
   height FOOTER_HEIGHT
 
+  & > nav
+    display -webkit-box
+    display -moz-box
+    display box
+
+    -webkit-box-pack center
+    -moz-box-pack center
+    box-pack center
+
+    & > *
+      -webkit-box-flex 1
+      -moz-box-flex 1
+      box-flex 1
+
+      &.box_2
+        -webkit-box-flex: 2
+        -moz-box-flex: 2
+        box-flex: 2
+
+      &.box_3
+        -webkit-box-flex: 3
+        -moz-box-flex: 3
+        box-flex: 3
+
+      &.box_4
+        -webkit-box-flex: 4
+        -moz-box-flex: 4
+        box-flex: 4
+
+      &.box_5
+        -webkit-box-flex: 5
+        -moz-box-flex: 5
+        box-flex: 5
+
+      &.box_6
+        -webkit-box-flex: 6
+        -moz-box-flex: 6
+        box-flex: 6
+
+      &.box_7
+        -webkit-box-flex: 7
+        -moz-box-flex: 7
+        box-flex: 7
+
+      &.box_8
+        -webkit-box-flex: 8
+        -moz-box-flex: 8
+        box-flex: 8
+
+      &.box_9
+        -webkit-box-flex: 9
+        -moz-box-flex: 9
+        box-flex: 9
+
+    & > div
+      display block
+      height FOOTER_HEIGHT
+
+      & > button
+        width 100%
+        height 100%
+
 article
   position fixed
   top HEADER_HEIGHT
