--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -37,6 +37,9 @@ footer
   background-color ASIDE
   color COLOR
 
+  & nav > div > button
+    background-color ASIDE
+
 article
   background-color BACKGROUND
   color TEXT
