--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -9,7 +9,19 @@ header > nav.right > button{margin-right:5px}
 header > nav.left{left:0;}
 header > nav.left > button{margin-left:5px}
 header > nav > button.button{text-indent:0;border:1px solid #737476;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;display:inline-block;font-weight:bold;font-style:normal;line-height:30px;text-decoration:none;text-align:center;-webkit-box-shadow:1px 1px rgba(255,255,255,0.25);-moz-box-shadow:1px 1px rgba(255,255,255,0.25);-ms-box-shadow:1px 1px rgba(255,255,255,0.25);-o-box-shadow:1px 1px rgba(255,255,255,0.25);box-shadow:1px 1px rgba(255,255,255,0.25);background-color:rgba(180,180,180,0.15)}
-footer{position:fixed;bottom:0;left:0;width:100%;height:80px}
+footer{position:fixed;bottom:0;left:0;width:100%;height:80px;}
+footer > nav{display:-webkit-box;display:-moz-box;display:box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;}
+footer > nav > *{-webkit-box-flex:1;-moz-box-flex:1;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;}
+footer > nav > *.box_2{-webkit-box-flex:2;-moz-box-flex:2;-webkit-box-flex:2;-moz-box-flex:2;-ms-box-flex:2;-o-box-flex:2;box-flex:2}
+footer > nav > *.box_3{-webkit-box-flex:3;-moz-box-flex:3;-webkit-box-flex:3;-moz-box-flex:3;-ms-box-flex:3;-o-box-flex:3;box-flex:3}
+footer > nav > *.box_4{-webkit-box-flex:4;-moz-box-flex:4;-webkit-box-flex:4;-moz-box-flex:4;-ms-box-flex:4;-o-box-flex:4;box-flex:4}
+footer > nav > *.box_5{-webkit-box-flex:5;-moz-box-flex:5;-webkit-box-flex:5;-moz-box-flex:5;-ms-box-flex:5;-o-box-flex:5;box-flex:5}
+footer > nav > *.box_6{-webkit-box-flex:6;-moz-box-flex:6;-webkit-box-flex:6;-moz-box-flex:6;-ms-box-flex:6;-o-box-flex:6;box-flex:6}
+footer > nav > *.box_7{-webkit-box-flex:7;-moz-box-flex:7;-webkit-box-flex:7;-moz-box-flex:7;-ms-box-flex:7;-o-box-flex:7;box-flex:7}
+footer > nav > *.box_8{-webkit-box-flex:8;-moz-box-flex:8;-webkit-box-flex:8;-moz-box-flex:8;-ms-box-flex:8;-o-box-flex:8;box-flex:8}
+footer > nav > *.box_9{-webkit-box-flex:9;-moz-box-flex:9;-webkit-box-flex:9;-moz-box-flex:9;-ms-box-flex:9;-o-box-flex:9;box-flex:9}
+footer > nav > div{display:block;height:80px;}
+footer > nav > div > button{width:100%;height:100%}
 article{position:fixed;top:50px;left:0;height:inherit;width:100%;display:none;}
 article.active{display:block}
 aside{display:block;width:256px;padding:6px;z-index:201;position:fixed;top:50px;bottom:0;left:-270px;-webkit-transition:all 150ms linear;-moz-transition:all 150ms linear;-ms-transition:all 150ms linear;-o-transition:all 150ms linear;transition:all 150ms linear;}
@@ -21,7 +33,8 @@ button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:n
 
 body{font:12.8px "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif}
 header{background-color:#06f;color:#f4f4f4}
-footer{background-color:#2f2f2f;color:#f4f4f4}
+footer{background-color:#2f2f2f;color:#f4f4f4;}
+footer nav > div > button{background-color:#2f2f2f}
 article{background-color:#e7e7e7;color:#000}
 aside{background-color:#2f2f2f;color:#f4f4f4}
 button{font-size:12.8px;background-color:#06f;color:#f4f4f4}
