--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -20,14 +20,17 @@ footer > nav > *.box_6{-webkit-box-flex:6;-moz-box-flex:6;-webkit-box-flex:6;-mo
 footer > nav > *.box_7{-webkit-box-flex:7;-moz-box-flex:7;-webkit-box-flex:7;-moz-box-flex:7;-ms-box-flex:7;-o-box-flex:7;box-flex:7}
 footer > nav > *.box_8{-webkit-box-flex:8;-moz-box-flex:8;-webkit-box-flex:8;-moz-box-flex:8;-ms-box-flex:8;-o-box-flex:8;box-flex:8}
 footer > nav > *.box_9{-webkit-box-flex:9;-moz-box-flex:9;-webkit-box-flex:9;-moz-box-flex:9;-ms-box-flex:9;-o-box-flex:9;box-flex:9}
-footer > nav > div{display:block;height:80px;}
-footer > nav > div > button{width:100%;height:100%}
+footer > nav > *.active{background-color:rgba(250,250,250,0.15)}
+footer > nav > div{display:block;height:80px;text-align:center;}
+footer > nav > div > button{width:100%;height:100%;}
+footer > nav > div > button.active{background-color:rgba(250,250,250,0.15)}
 article{position:fixed;top:50px;left:0;height:inherit;width:100%;display:none;}
 article.active{display:block}
 aside{display:block;width:256px;padding:6px;z-index:201;position:fixed;top:50px;bottom:0;left:-270px;-webkit-transition:all 150ms linear;-moz-transition:all 150ms linear;-ms-transition:all 150ms linear;-o-transition:all 150ms linear;transition:all 150ms linear;}
 aside.show{-webkit-transform:translate(270px);-moz-transform:translate(270px);-ms-transform:translate(270px);-o-transform:translate(270px);transform:translate(270px)}
 div[data-element="aside_background"]{position:fixed;top:50px;bottom:0;left:0;right:0;-webkit-transition:opacity 1s ease-out;-moz-transition:opacity 1s ease-out;-ms-transition:opacity 1s ease-out;-o-transition:opacity 1s ease-out;transition:opacity 1s ease-out;z-index:0;}
 div[data-element="aside_background"].show{background-color:rgba(0,0,0,0.6);z-index:200}
+.indented{padding:.8em}
 
 button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:normal;line-height:40px;text-decoration:none;text-align:center}
 
