--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -21,6 +21,7 @@ FONT_SIZE_LARGE         = 1.4em
 // LIST_SMALL_IMAGE        = 24px
 
 INDENT                  = 0.8em
+NOTIFICATION_INDENT     = 2em
 
 // FORM_HEIGHT             = 30px
 // FORM_border             = 2px
@@ -37,3 +38,5 @@ HEADER_NAV_INDEX        = 102
 
 ASIDE_BCK_INDEX         = 200
 ASIDE_INDEX             = 201
+
+NOTIFICATION_INDEX      = 400
