--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -34,6 +34,13 @@ div[data-element="aside_background"].show{background-color:rgba(0,0,0,0.6);z-ind
 
 button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:normal;line-height:40px;text-decoration:none;text-align:center}
 
+div[data-element="notification"]{position:fixed;top:0;bottom:0;left:0;right:0;display:none;background-color:rgba(0,0,0,0.6);z-index:400;padding-left:2em;padding-right:2em;-webkit-box-align:center;-moz-box-align:center;-webkit-box-align:center;-moz-box-align:center;-ms-box-align:center;-o-box-align:center;box-align:center;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;}
+div[data-element="notification"].show{display:-webkit-box;display:-moz-box;display:box}
+div[data-element="notification"] > div.window{background-color:rgba(0,0,0,0.8);color:rgba(250,250,250,0.8);text-align:center;padding:.8em;-webkit-box-flex:1;-moz-box-flex:1;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;}
+div[data-element="notification"] > div.window > *{display:block;text-align:center;width:100%}
+div[data-element="notification"] > div.window > .title{padding-bottom:.5em;border-bottom:2px solid rgba(250,250,250,0.8)}
+div[data-element="notification"] > div.window > .content{padding-top:.5em}
+
 body{font:12.8px "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif}
 header{background-color:#06f;color:#f4f4f4}
 footer{background-color:#2f2f2f;color:#f4f4f4;}
