Fixed header button css

--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -54,6 +54,15 @@ header
       & > button
         margin-left 5px
 
+    & > button
+      text-indent 0
+      display inline-block
+      font-weight bold
+      font-style normal
+      line-height 30px
+      text-decoration none
+      text-align center
+
     & > button.button
       text-indent 0
       border 1px solid #737476
