Style fixings and added ms support for flexbox

--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -85,55 +85,66 @@ footer
 
   & > nav
     display -webkit-box
+    display -ms-box
     display -moz-box
     display box
 
     -webkit-box-pack center
+    -ms-box-pack center
     -moz-box-pack center
     box-pack center
 
     & > *
       -webkit-box-flex 1
+      -ms-box-flex 1
       -moz-box-flex 1
       box-flex 1
 
       &.box_2
         -webkit-box-flex: 2
+        -ms-box-flex: 2
         -moz-box-flex: 2
         box-flex: 2
 
       &.box_3
         -webkit-box-flex: 3
+        -ms-box-flex: 3
         -moz-box-flex: 3
         box-flex: 3
 
       &.box_4
         -webkit-box-flex: 4
+        -ms-box-flex: 4
         -moz-box-flex: 4
         box-flex: 4
 
       &.box_5
         -webkit-box-flex: 5
+        -ms-box-flex: 5
         -moz-box-flex: 5
         box-flex: 5
 
       &.box_6
         -webkit-box-flex: 6
+        -ms-box-flex: 6
         -moz-box-flex: 6
         box-flex: 6
 
       &.box_7
         -webkit-box-flex: 7
+        -ms-box-flex: 7
         -moz-box-flex: 7
         box-flex: 7
 
       &.box_8
         -webkit-box-flex: 8
+        -ms-box-flex: 8
         -moz-box-flex: 8
         box-flex: 8
 
       &.box_9
         -webkit-box-flex: 9
+        -ms-box-flex: 9
         -moz-box-flex: 9
         box-flex: 9
 
