--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -11,16 +11,16 @@ header > nav.left > button{margin-left:5px}
 header > nav > button{text-indent:0;display:inline-block;font-weight:bold;font-style:normal;line-height:30px;text-decoration:none;text-align:center}
 header > nav > button.button{text-indent:0;border:1px solid #737476;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;display:inline-block;font-weight:bold;font-style:normal;line-height:30px;text-decoration:none;text-align:center;-webkit-box-shadow:1px 1px rgba(255,255,255,0.25);-moz-box-shadow:1px 1px rgba(255,255,255,0.25);-ms-box-shadow:1px 1px rgba(255,255,255,0.25);-o-box-shadow:1px 1px rgba(255,255,255,0.25);box-shadow:1px 1px rgba(255,255,255,0.25);background-color:rgba(180,180,180,0.15)}
 footer{position:fixed;bottom:0;left:0;width:100%;height:65px;}
-footer > nav{display:-webkit-box;display:-moz-box;display:box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;}
-footer > nav > *{-webkit-box-flex:1;-moz-box-flex:1;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;}
-footer > nav > *.box_2{-webkit-box-flex:2;-moz-box-flex:2;-webkit-box-flex:2;-moz-box-flex:2;-ms-box-flex:2;-o-box-flex:2;box-flex:2}
-footer > nav > *.box_3{-webkit-box-flex:3;-moz-box-flex:3;-webkit-box-flex:3;-moz-box-flex:3;-ms-box-flex:3;-o-box-flex:3;box-flex:3}
-footer > nav > *.box_4{-webkit-box-flex:4;-moz-box-flex:4;-webkit-box-flex:4;-moz-box-flex:4;-ms-box-flex:4;-o-box-flex:4;box-flex:4}
-footer > nav > *.box_5{-webkit-box-flex:5;-moz-box-flex:5;-webkit-box-flex:5;-moz-box-flex:5;-ms-box-flex:5;-o-box-flex:5;box-flex:5}
-footer > nav > *.box_6{-webkit-box-flex:6;-moz-box-flex:6;-webkit-box-flex:6;-moz-box-flex:6;-ms-box-flex:6;-o-box-flex:6;box-flex:6}
-footer > nav > *.box_7{-webkit-box-flex:7;-moz-box-flex:7;-webkit-box-flex:7;-moz-box-flex:7;-ms-box-flex:7;-o-box-flex:7;box-flex:7}
-footer > nav > *.box_8{-webkit-box-flex:8;-moz-box-flex:8;-webkit-box-flex:8;-moz-box-flex:8;-ms-box-flex:8;-o-box-flex:8;box-flex:8}
-footer > nav > *.box_9{-webkit-box-flex:9;-moz-box-flex:9;-webkit-box-flex:9;-moz-box-flex:9;-ms-box-flex:9;-o-box-flex:9;box-flex:9}
+footer > nav{display:-webkit-box;display:-ms-box;display:-moz-box;display:box;-webkit-box-pack:center;-ms-box-pack:center;-moz-box-pack:center;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;}
+footer > nav > *{-webkit-box-flex:1;-ms-box-flex:1;-moz-box-flex:1;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;}
+footer > nav > *.box_2{-webkit-box-flex:2;-ms-box-flex:2;-moz-box-flex:2;-webkit-box-flex:2;-moz-box-flex:2;-ms-box-flex:2;-o-box-flex:2;box-flex:2}
+footer > nav > *.box_3{-webkit-box-flex:3;-ms-box-flex:3;-moz-box-flex:3;-webkit-box-flex:3;-moz-box-flex:3;-ms-box-flex:3;-o-box-flex:3;box-flex:3}
+footer > nav > *.box_4{-webkit-box-flex:4;-ms-box-flex:4;-moz-box-flex:4;-webkit-box-flex:4;-moz-box-flex:4;-ms-box-flex:4;-o-box-flex:4;box-flex:4}
+footer > nav > *.box_5{-webkit-box-flex:5;-ms-box-flex:5;-moz-box-flex:5;-webkit-box-flex:5;-moz-box-flex:5;-ms-box-flex:5;-o-box-flex:5;box-flex:5}
+footer > nav > *.box_6{-webkit-box-flex:6;-ms-box-flex:6;-moz-box-flex:6;-webkit-box-flex:6;-moz-box-flex:6;-ms-box-flex:6;-o-box-flex:6;box-flex:6}
+footer > nav > *.box_7{-webkit-box-flex:7;-ms-box-flex:7;-moz-box-flex:7;-webkit-box-flex:7;-moz-box-flex:7;-ms-box-flex:7;-o-box-flex:7;box-flex:7}
+footer > nav > *.box_8{-webkit-box-flex:8;-ms-box-flex:8;-moz-box-flex:8;-webkit-box-flex:8;-moz-box-flex:8;-ms-box-flex:8;-o-box-flex:8;box-flex:8}
+footer > nav > *.box_9{-webkit-box-flex:9;-ms-box-flex:9;-moz-box-flex:9;-webkit-box-flex:9;-moz-box-flex:9;-ms-box-flex:9;-o-box-flex:9;box-flex:9}
 footer > nav > *.active{background-color:rgba(250,250,250,0.15)}
 footer > nav > div{display:block;height:65px;text-align:center;}
 footer > nav > div > button{width:100%;height:100%;}
@@ -35,9 +35,9 @@ div[data-element="aside_background"].show{background-color:#000;opacity:.6;z-ind
 
 button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:normal;line-height:40px;text-decoration:none;text-align:center}
 
-div[data-element="notification"]{position:fixed;top:0;bottom:0;left:0;right:0;display:none;background-color:rgba(0,0,0,0.6);z-index:400;padding-left:2em;padding-right:2em;-webkit-box-align:center;-moz-box-align:center;-webkit-box-align:center;-moz-box-align:center;-ms-box-align:center;-o-box-align:center;box-align:center;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;}
-div[data-element="notification"].show{display:-webkit-box;display:-moz-box;display:box}
-div[data-element="notification"] > div.window{background-color:rgba(0,0,0,0.8);color:rgba(250,250,250,0.8);text-align:center;padding:.8em;-webkit-box-flex:1;-moz-box-flex:1;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;}
+div[data-element="notification"]{position:fixed;top:0;bottom:0;left:0;right:0;display:none;background-color:rgba(0,0,0,0.6);z-index:400;padding-left:2em;padding-right:2em;-webkit-box-align:center;-ms-box-align:center;-moz-box-align:center;-webkit-box-align:center;-moz-box-align:center;-ms-box-align:center;-o-box-align:center;box-align:center;-webkit-box-pack:center;-ms-box-pack:center;-moz-box-pack:center;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;}
+div[data-element="notification"].show{display:-webkit-box;display:-ms-box;display:-moz-box;display:box}
+div[data-element="notification"] > div.window{background-color:rgba(0,0,0,0.8);color:rgba(250,250,250,0.8);text-align:center;padding:.8em;-webkit-box-flex:1;-moz-ms-flex:1;-moz-box-flex:1;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;}
 div[data-element="notification"] > div.window > *{display:block;text-align:center;width:100%}
 div[data-element="notification"] > div.window > .title{padding-bottom:.5em;border-bottom:2px solid rgba(250,250,250,0.8)}
 div[data-element="notification"] > div.window > .content{padding-top:.5em}
