--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -183,7 +183,7 @@ aside
   top 50px
   bottom 0
   left - ASIDE_TRANSITION
-  transition(all ASIDE_TRANSITION_TIME linear)
+  transition(all ASIDE_TRANSITION_TIME ease)
 
   &.show
     transform(translate(ASIDE_TRANSITION))
