--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -8,6 +8,9 @@ ASIDE_PADDING           = 6px
 ASIDE_TRANSITION        = 270px
 ASIDE_TRANSITION_TIME   = 150ms
 
+NOTIFICATION_TRANSITION        = 570px
+NOTIFICATION_TRANSITION_TIME   = 500ms
+
 FOOTER_HEIGHT           = 65px
 
 FONT_SIZE_TINY          = 11px
