--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -203,6 +203,6 @@ div[data-element="aside_background"]
     opacity 0.6
     z-index ASIDE_BCK_INDEX
 
-.indented
+.indented > div
   padding INDENT
 
