--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -20,3 +20,26 @@ article ul
 
     &:first-child
       border-top 1px solid rgba(0, 0, 0, 0.1)
+
+aside ul
+  list-style none
+  width 100%
+  padding 0
+  margin-left 0
+  margin-right 0
+
+
+  & > li
+    position relative
+    font-size 1.2em
+    // border-bottom 1px solid rgba(255, 255, 255, 0.1)
+    padding 11px 60px 11px 10px
+
+    &.separator
+      background-color rgba(0, 0, 0, 0.1)
+      color white
+      padding 1px 60px 1px 10px
+
+
+    &:first-child
+      // border-top 1px solid rgba(255, 255, 255, 0.1)
