--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -9,11 +9,12 @@ div[data-element="notification"]
   z-index NOTIFICATION_INDEX
   padding-left NOTIFICATION_INDENT
   padding-right NOTIFICATION_INDENT
+  padding-top NOTIFICATION_INDENT*2
 
-  -webkit-box-align center
-  -ms-box-align center
-  -moz-box-align center
-  box-align center
+  -webkit-box-align start
+  -ms-box-align start
+  -moz-box-align start
+  box-align start
 
   -webkit-box-pack center
   -ms-box-pack center
@@ -26,18 +27,9 @@ div[data-element="notification"]
     display -moz-box
     display box
 
-    -webkit-box-align center
-    -ms-box-align center
-    -moz-box-align center
-    box-align center
-
-    -webkit-box-pack center
-    -ms-box-pack center
-    -moz-box-pack center
-    box-pack center
 
   & > div.window
-    margin-top 100%
+    margin-top 200%
     background-color rgba(0,0,0,0.8)
     color rgba(250, 250, 250, 0.8)
     text-align center
@@ -53,6 +45,7 @@ div[data-element="notification"]
     -ms-transition-duration NOTIFICATION_TRANSITION_TIME
     -o-transition-duration NOTIFICATION_TRANSITION_TIME
     transition-duration NOTIFICATION_TRANSITION_TIME
+
     -webkit-transition-timing-function cubic-bezier(.645,.045,.355,1)
     -moz-transition-timing-function cubic-bezier(.645,.045,.355,1)
     -ms-transition-timing-function cubic-bezier(.645,.045,.355,1)
