Improved header button theme

--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -48,6 +48,9 @@ aside
   background-color ASIDE
   color COLOR
 
+header button.button
+  background-color lighten(THEME, 15%)
+
 button
   font-size FONT_SIZE
   background-color THEME
