--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -1,45 +1,47 @@
 @import "vendor.styl"
 
 /* CONSTANTS */
-HEADER_HEIGHT           = 50px
+HEADER_HEIGHT                   = 50px
 
-ASIDE_WIDTH             = 256px
-ASIDE_PADDING           = 6px
-ASIDE_TRANSITION        = 270px
-ASIDE_TRANSITION_TIME   = 150ms
+ASIDE_WIDTH                     = 256px
+ASIDE_PADDING                   = 6px
+ASIDE_TRANSITION                = 270px
+ASIDE_TRANSITION_TIME           = 150ms
 
-NOTIFICATION_TRANSITION        = 570px
-NOTIFICATION_TRANSITION_TIME   = 500ms
+SECTION_TRANSITION_TIME         = 250ms
 
-FOOTER_HEIGHT           = 65px
+NOTIFICATION_TRANSITION         = 570px
+NOTIFICATION_TRANSITION_TIME    = 500ms
 
-FONT_SIZE_TINY          = 11px
-FONT_SIZE_SMALL         = 0.9em
-FONT_SIZE_NORMAL        = 1.0em
-FONT_SIZE_BIG           = 1.2em
-FONT_SIZE_LARGE         = 1.4em
+FOOTER_HEIGHT                   = 65px
 
-// LIST_IMAGE              = 44px
-// LIST_BIG_IMAGE          = 65px
-// LIST_SMALL_IMAGE        = 24px
+FONT_SIZE_TINY                  = 11px
+FONT_SIZE_SMALL                 = 0.9em
+FONT_SIZE_NORMAL                = 1.0em
+FONT_SIZE_BIG                   = 1.2em
+FONT_SIZE_LARGE                 = 1.4em
 
-INDENT                  = 0.8em
-NOTIFICATION_INDENT     = 2em
+// LIST_IMAGE                   = 44px
+// LIST_BIG_IMAGE               = 65px
+// LIST_SMALL_IMAGE             = 24px
 
-// FORM_HEIGHT             = 30px
-// FORM_border             = 2px
-// FORM_border_height      = FORM_HEIGHT + (FORM_border * 4)
-// FORM_PROGRESS_HEIGHT    = 5px
-// FORM_RADIO_BUTTON       = 26px
+INDENT                          = 0.8em
+NOTIFICATION_INDENT             = 2em
 
-// BUTTON_HEIGHT           = 34px
+// FORM_HEIGHT                  = 30px
+// FORM_border                  = 2px
+// FORM_border_height           = FORM_HEIGHT + (FORM_border * 4)
+// FORM_PROGRESS_HEIGHT         = 5px
+// FORM_RADIO_BUTTON            = 26px
+
+// BUTTON_HEIGHT                = 34px
 
 /* Z-INDEXES */
-SECTION_INDEX           = 100
-HEADER_H1_INDEX         = 101
-HEADER_NAV_INDEX        = 102
+SECTION_INDEX                   = 100
+HEADER_H1_INDEX                 = 101
+HEADER_NAV_INDEX                = 102
 
-ASIDE_BCK_INDEX         = 200
-ASIDE_INDEX             = 201
+ASIDE_BCK_INDEX                 = 200
+ASIDE_INDEX                     = 201
 
-NOTIFICATION_INDEX      = 400
+NOTIFICATION_INDEX              = 400
