--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -1,6 +1,6 @@
 body{width:100%;height:100%;background-color:#000;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
-section{height:inherit;width:inherit;display:none;position:fixed;z-index:100;top:0;left:0;}
-section.active{display:block}
+section{height:inherit;width:inherit;position:fixed;z-index:0;top:0;left:0;opacity:0;-webkit-transition-duration:250ms;-moz-transition-duration:250ms;-ms-transition-duration:250ms;-o-transition-duration:250ms;-webkit-transition-duration:250ms;-moz-transition-duration:250ms;-ms-transition-duration:250ms;-o-transition-duration:250ms;transition-duration:250ms;}
+section.active{opacity:1;z-index:100}
 header{position:fixed;top:0;left:0;height:50px;width:100%;}
 header > h1{font-weight:bold;display:inline-block;position:absolute;text-align:center;width:100%;left:0;z-index:101}
 header > nav{margin-top:5px;position:absolute;z-index:102;}
