--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -21,6 +21,9 @@ article ul
     &:first-child
       border-top 1px solid rgba(0, 0, 0, 0.1)
 
+  &.indented > li
+    margin INDENT
+
 aside ul
   list-style none
   width 100%
