--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -63,3 +63,9 @@ button.accept
 button.cancel
   background-color ALERT
   color COLOR
+
+aside .current, footer .current
+  background-color lighten(ASIDE, 15%)
+
+
+
