Modifications on aside animation and notification

--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -18,10 +18,22 @@ aside
   top 50px
   bottom 0
   left - ASIDE_TRANSITION
-  transition(all ASIDE_TRANSITION_TIME ease)
+  // transition(all ASIDE_TRANSITION_TIME ease)
+  -webkit-transition-duration ASIDE_TRANSITION_TIME
+  -moz-transition-duration ASIDE_TRANSITION_TIME
+  -ms-transition-duration ASIDE_TRANSITION_TIME
+  -o-transition-duration ASIDE_TRANSITION_TIME
+  transition-duration ASIDE_TRANSITION_TIME
+
+  -webkit-transition-timing-function cubic-bezier(.73, .25, .4, .97)
+  -moz-transition-timing-function cubic-bezier(.73, .25, .4, .97)
+  -ms-transition-timing-function cubic-bezier(.73, .25, .4, .97)
+  -o-transition-timing-function cubic-bezier(.73, .25, .4, .97)
+  transition-timing-function cubic-bezier(.73, .25, .4, .97)
 
   &.show
-    transform(translate(ASIDE_TRANSITION))
+    // transform(translate(ASIDE_TRANSITION))
+    left 0
 
 div[data-element="aside_background"]
   position fixed
