--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -67,5 +67,8 @@ button.cancel
 aside .current, footer .current
   background-color lighten(ASIDE, 15%)
 
+div[data-element="notification"] > div.window
+  background-color lighten(BACKGROUND, 25%)
+
 
 
