--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -35,6 +35,14 @@ aside
     // transform(translate(ASIDE_TRANSITION))
     left 0
 
+  & .counter
+    margin-top -3px
+    -webkit-border-radius 2px
+    -moz-border-radius 2px
+    border-radius 2px
+    padding .2em .4em .2em .4em
+    float right
+
 div[data-element="aside_background"]
   position fixed
   top HEADER_HEIGHT
