--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -48,6 +48,9 @@ aside
   background-color ASIDE
   color COLOR
 
+  & .counter
+    background-color lighten(ASIDE, 30%)
+
 header button.button
   background-color lighten(THEME, 15%)
 
