Added footer counters

--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -40,6 +40,9 @@ footer
   & nav > div > button
     background-color ASIDE
 
+  & .counter
+    border 1px solid COLOR
+
 article
   background-color BACKGROUND
   color TEXT
