--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -33,3 +33,15 @@ header
 footer div button
   width 100%
   height 100%
+
+  & .counter
+    position relative
+    top - INDENT * 1.5
+    margin-left INDENT
+    margin-top INDENT
+    line-height 15px
+    -webkit-border-radius 4px
+    -moz-border-radius 4px
+    border-radius 4px
+    padding .2em .5em .2em .5em
+    font-size FONT_SIZE_SMALL
